beta 1.0 not fixed: 1) ads 2) scrollbar

--- a/style/style.css
+++ b/style/style.css
@@ -89,8 +89,20 @@ div, a {
 	filter: alpha(opacity=95);
 }
 
-#yuelink { float:left; width:120px; height:45px; margin:18px 0 0 150px;
+#yuelink { float:left; width:120px; height:45px; margin:24px 0 0 150px;
 	background:url(images/yuelink-100.png) no-repeat;
+}
+
+#yuelink:hover { float:left; width:120px; height:45px; margin:24px 0 0 150px;
+	background:url(images/yuelink-100.png) no-repeat;
+}
+
+#bSlogan{
+	background: url(/yuelink/img/15.png) no-repeat;width:209px;height:38px;margin-top:10px;
+}
+
+#bSlogan:hover{
+	background: url(/yuelink/img/14.png) no-repeat;width:209px;height:38px;margin-top:10px;
 }
 
 #console #playCtrl, #console #userBox {
@@ -155,7 +167,6 @@ div, a {
 #playCtrl-bar {
 	position:relative;
 	float:left; width: 385px; height:4px;
-	margin-top: 7px;
 	margin-bottom: 1px;
 	padding:8px 0;
 	border-radius:2px;
@@ -188,6 +199,7 @@ div, a {
 }
 
 #playCtrl-volume {
+	margin-top: 3px;
 	float:right;
 	position:relative;
 	width: 25px; height:9px;
@@ -201,6 +213,7 @@ div, a {
 	position: absolute;
 }
 .speaker-white {
+	margin-top:3px;
 	float:right;
 	margin-right: 3px;
 }
@@ -235,7 +248,10 @@ div, a {
   display: block;
 }
 #player #prev a:hover {
-  background: url(icons.png) -400px -211px no-repeat;
+  background: url(/yuelink/images/icons/prev-hover.png) no-repeat;
+}
+#player #prev a:active {
+  background: url(/yuelink/images/icons/prev-focus.png) no-repeat;
 }
 #player #next {
   right: 0px;
@@ -244,8 +260,13 @@ div, a {
 #player #next a {
   display: block;
 }
+
 #player #next a:hover {
-  background: url(icons.png) -1163px -100px no-repeat;
+  background: url(/yuelink/images/icons/next-hover.png) no-repeat;
+}
+
+#player #next a:active {
+  background: url(/yuelink/images/icons/next-focus.png) no-repeat;
 }
 
 
